--- a/src/MSBuild/Resources/xlf/Strings.ko.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.ko.xlf
@@ -337,15 +337,16 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                        -logger:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -logger:XMLLogger,C:\Loggers\MyLogger.dll;OutputAsHTML
 </source>
-        <target state="needs-review-translation">  -logger:&lt;logger&gt;   이 로거를 사용하여 MSBuild의 이벤트를 기록합니다. 
-                     여러 로거를 지정하려면 각 로거를 개별적으로 지정합니다.
-                     &lt;logger&gt; 구문은 다음과 같습니다.
-                       [&lt;logger class&gt;,]&lt;logger assembly&gt;[;&lt;logger parameters&gt;]
-                     &lt;logger class&gt; 구문은 다음과 같습니다.
-                       [&lt;partial or full namespace&gt;.]&lt;logger class name&gt;
-                     &lt;logger assembly&gt; 구문은 다음과 같습니다.
-                       {&lt;assembly name&gt;[,&lt;strong name&gt;] | &lt;assembly file&gt;}
-                     &lt;logger parameters&gt;는 선택 사항이고 입력한 대로 정확히 
+        <target state="translated">  -logger:&lt;로거&gt;   이 로거를 사용하여 MSBuild의 이벤트를 기록합니다. 여러
+                     로거를 지정하려면 각 로거를 개별적으로 지정합니다.
+                     &lt;로거&gt; 구문은 다음과 같습니다.
+                       [&lt;클래스&gt;,]&lt;어셈블리&gt;[,&lt;옵션&gt;][;&lt;매개 변수&gt;]
+                     &lt;로거 클래스&gt; 구문은 다음과 같습니다.
+                       [&lt;부분 또는 전체 네임스페이스&gt;.]&lt;로거 클래스 이름&gt;
+                     &lt;로거 어셈블리&gt; 구문은 다음과 같습니다.
+                       {&lt;어셈블리 이름&gt;[,&lt;strong name&gt;] | &lt;어셈블리 파일&gt;}
+                     로거 옵션은 MSBuild가 로거를 만드는 방법을 지정합니다.
+                     &lt;로거 매개 변수&gt;는 선택 사항이고 입력한 대로 정확히
                      로거에 전달됩니다. (약식: -l)
                      예:
                        -logger:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
@@ -605,18 +606,19 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                        -dl:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -dl:MyLogger,C:\My.dll*ForwardingLogger,C:\Logger.dll
 </source>
-        <target state="needs-review-translation">  -distributedLogger:&lt;central logger&gt;*&lt;forwarding logger&gt;
-                     이 로거를 통해 MSBuild의 이벤트를 기록하여 
-                     각 노드에 다른 로거 인스턴스를 연결합니다. 
-                     여러 로거를 지정하려면 각 로거를 개별적으로 지정합니다.
+        <target state="translated">  -distributedLogger:&lt;중앙 로거&gt;*&lt;전달 로거&gt;
+                     이 로거를 사용해 MSBuild의 이벤트를 기록하여
+                     각 노드에 다른 로거 인스턴스를 연결합니다. 여러
+                     로거를 지정하려면 각 로거를 개별적으로 지정합니다.
                      (약식 -dl)
-                     &lt;logger&gt; 구문은 다음과 같습니다.
-                       [&lt;logger class&gt;,]&lt;logger assembly&gt;[;&lt;logger parameters&gt;]
-                     &lt;logger class&gt; 구문은 다음과 같습니다.
-                       [&lt;partial or full namespace&gt;.]&lt;logger class name&gt;
-                     &lt;logger assembly&gt; 구문은 다음과 같습니다.
-                       {&lt;assembly name&gt;[,&lt;strong name&gt;] | &lt;assembly file&gt;}
-                     &lt;logger parameters&gt;는 선택 사항이고 
+                     &lt;로거&gt; 구문은 다음과 같습니다.
+                       [&lt;클래스&gt;,]&lt;어셈블리&gt;[,&lt;옵션&gt;][;&lt;매개 변수&gt;]
+                     &lt;로거 클래스&gt; 구문은 다음과 같습니다.
+                       [&lt;부분 또는 전체 네임스페이스&gt;.]&lt;로거 클래스 이름&gt;
+                     &lt;로거 어셈블리&gt; 구문은 다음과 같습니다.
+                       {&lt;어셈블리 이름&gt;[,&lt;strong name&gt;] | &lt;어셈블리 파일&gt;}
+                     로거 옵션은 MSBuild가 로거를 만드는 방법을 지정합니다.
+                      &lt;로거 매개 변수&gt;는 선택 사항이고
                      입력한 대로 정확히 로거에 전달됩니다. (약식: -l)
                      예:
                        -dl:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
@@ -1129,7 +1131,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
       </trans-unit>
       <trans-unit id="OptionalLoggerCreationMessage">
         <source>The specified logger could not be created and will not be used. {0}</source>
-        <target state="new">The specified logger could not be created and will not be used. {0}</target>
+        <target state="translated">지정된 로거를 만들 수 없어 지정된 로거가 사용되지 않습니다. {0}</target>
         <note>
       UE: This error is shown when a logger cannot be loaded and instantiated from its assembly.
       LOCALIZATION: {0} contains the exception message explaining why the
