--- a/src/MSBuild/Resources/xlf/Strings.ru.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.ru.xlf
@@ -336,16 +336,17 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                        -logger:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -logger:XMLLogger,C:\Loggers\MyLogger.dll;OutputAsHTML
 </source>
-        <target state="needs-review-translation">  -logger:&lt;журнал&gt;   Использовать этот журнал для регистрации событий из MSBuild. Чтобы
-                     задать несколько журналов, укажите каждый из них отдельно.
-                     Синтаксис &lt;журнала&gt;:
-                       [&lt;класс журнала&gt;,]&lt;сборка журнала&gt;[;&lt;параметры журнала&gt;]
-                     Синтаксис &lt;класса журнала&gt;:
-                       [&lt;частичное или полное пространство имен&gt;.]&lt;имя класса журнала&gt;
-                     Синтаксис &lt;сборки журнала&gt;:
+        <target state="translated">  -logger:&lt;средство ведения журнала&gt;   Использовать это средство ведения журнала для регистрации событий MSBuild. Чтобы указать
+                     несколько средств ведения журнала, укажите каждое из них отдельно.
+                     Синтаксис &lt;средства ведения журнала&gt;:
+                       [&lt;класс&gt;,]&lt;сборка&gt;[,&lt;настройки&gt;][;&lt;параметры&gt;]
+                     Синтаксис &lt;класса средства ведения журнала&gt;:
+                       [&lt;частичное или полное пространство имен&gt;.]&lt;имя класса средства ведения журнала&gt;
+                     Синтаксис &lt;сборки средства ведения журнала&gt;:
                        {&lt;имя сборки&gt;[,&lt;strong name&gt;] | &lt;файл сборки&gt;}
-                     &lt;Параметры журнала&gt; являются необязательными и передаются
-                     в журнал в таком же виде, в каком они вводятся. (Краткая форма: -l)
+                     Параметры средства ведения журнала указывают, как MSBuild создает средство ведения журнала.
+                     &lt;Параметры средства ведения журнала&gt; являются необязательными и передаются
+                     средству ведения журнала в том виде, в котором были введены. (Краткая форма: -l)
                      Примеры:
                        -logger:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -logger:XMLLogger,C:\Loggers\MyLogger.dll;OutputAsHTML
@@ -605,19 +606,20 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                        -dl:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -dl:MyLogger,C:\My.dll*ForwardingLogger,C:\Logger.dll
 </source>
-        <target state="needs-review-translation">  -distributedLogger:&lt;центральный журнал&gt;*&lt;журнал перенаправления&gt;
-                     Использовать этот журнал для регистрации событий из MSBuild, присоединяя
-                     отдельный экземпляр журнала к каждому узлу. Чтобы задать
-                     несколько журналов, укажите каждый из них отдельно.
-                     (Краткая форма: -dl)
-                     Синтаксис &lt;журнала&gt;:
-                       [&lt;класс журнала&gt;,]&lt;сборка журнала&gt;[;&lt;параметры журнала&gt;]
-                     Синтаксис &lt;класса журнала&gt;:
-                       [&lt;частичное или полное пространство имен&gt;.]&lt;имя класса журнала&gt;
-                     Синтаксис &lt;сборки журнала&gt;:
+        <target state="translated">  -distributedLogger:&lt;центральное средство ведения журнала&gt;*&lt;средство ведения журнала для перенаправления&gt;
+                     Использовать это средство ведения журнала для регистрации событий MSBuild, присоединив
+                     другой экземпляр средства ведения журнала к каждому узлу. Чтобы указать
+                     несколько средств ведения журнала, укажите каждое из них отдельно.
+                     (Краткая форма -dl)
+                     Синтаксис &lt;средства ведения журнала&gt;:
+                       [&lt;класс&gt;,]&lt;сборка&gt;[,&lt;настройки&gt;][;&lt;параметры&gt;]
+                     Синтаксис &lt;класса средства ведения журнала&gt;:
+                       [&lt;частичное или полное пространство имен&gt;.]&lt;имя класса средства ведения журнала&gt;
+                     Синтаксис &lt;сборки средства ведения журнала&gt;:
                        {&lt;имя сборки&gt;[,&lt;strong name&gt;] | &lt;файл сборки&gt;}
-                     &lt;Параметры журнала&gt; являются необязательными и передаются
-                     в журнал в таком же виде, в каком вводятся. (Краткая форма: -l)
+                     Параметры средства ведения журнала указывают, как MSBuild создает средство ведения журнала.
+                     &lt;Параметры средства ведения журнала&gt; являются необязательными и передаются
+                     средству ведения журнала в том виде, в котором были введены. (Краткая форма: -l)
                      Примеры:
                        -dl:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -dl:MyLogger,C:\My.dll*ForwardingLogger,C:\Logger.dll
@@ -1129,7 +1131,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
       </trans-unit>
       <trans-unit id="OptionalLoggerCreationMessage">
         <source>The specified logger could not be created and will not be used. {0}</source>
-        <target state="new">The specified logger could not be created and will not be used. {0}</target>
+        <target state="translated">Указанное средство ведения журнала не может быть создано и не будет использоваться. {0}</target>
         <note>
       UE: This error is shown when a logger cannot be loaded and instantiated from its assembly.
       LOCALIZATION: {0} contains the exception message explaining why the
