--- a/src/MSBuild/Resources/xlf/Strings.zh-Hans.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.zh-Hans.xlf
@@ -337,17 +337,18 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                        -logger:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -logger:XMLLogger,C:\Loggers\MyLogger.dll;OutputAsHTML
 </source>
-        <target state="needs-review-translation">  -logger:&lt;logger&gt;  使用此记录器来记录 MSBuild 中的事件。若要指定
-           多个记录器，请分别指定每个记录器。
-           &lt;logger&gt; 语法为:
-            [&lt;logger class&gt;,]&lt;logger assembly&gt;[;&lt;logger parameters&gt;]
-          &lt;logger class&gt; 语法为: 
-            [&lt;partial or full namespace&gt;.]&lt;logger class name&gt;
-          &lt;logger assembly&gt; 语法为: 
-            {&lt;assembly name&gt;[,&lt;strong name&gt;] | &lt;assembly file&gt;}
-           &lt;logger parameters&gt; 是可选的，并按键入的
-          形式原样传递给记录器。(缩写: -l)
-           示例: 
+        <target state="translated">  -logger:&lt;logger&gt;   使用此记录器来记录 MSBuild 中的事件。要指定
+                     多个记录器，请分别指定每个记录器。
+                     &lt;logger&gt; 语法为:
+                       [&lt;class&gt;,]&lt;assembly&gt;[,&lt;options&gt;][;&lt;parameters&gt;]
+                     &lt;logger class&gt; 语法为:
+                       [&lt;partial or full namespace&gt;.]&lt;logger class name&gt;
+                     &lt;logger assembly&gt; 语法为:
+                       {&lt;assembly name&gt;[,&lt;strong name&gt;] | &lt;assembly file&gt;}
+                     记录器选项指定 MSBuild 创建记录器的方式。
+                     &lt;logger parameters&gt; 是可选的，并按键入的
+                     形式原样传递给记录器。(缩写形式: -l)
+                     示例:
                        -logger:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -logger:XMLLogger,C:\Loggers\MyLogger.dll;OutputAsHTML
 </target>
@@ -605,22 +606,23 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                        -dl:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -dl:MyLogger,C:\My.dll*ForwardingLogger,C:\Logger.dll
 </source>
-        <target state="needs-review-translation"> -distributedlogger:&lt;central logger&gt;*&lt;forwarding logger&gt;           
-           使用此记录器来记录 MSBuild 中的事件，向每个节点
-           附加不同的记录器实例。若要指定
-           多个记录器，请分别指定每个记录器。
-           (缩写 -dl)
-           &lt;logger&gt; 语法为: 
-            [&lt;logger class&gt;,]&lt;logger assembly&gt;[;&lt;logger parameters&gt;]
-           &lt;logger class&gt; 语法为: 
-            [&lt;partial or full namespace&gt;.]&lt;logger class name&gt;
-           &lt;logger assembly&gt; 语法为: 
-            {&lt;assembly name&gt;[,&lt;strong name&gt;] | &lt;assembly file&gt;}
-           &lt;logger parameters&gt; 是可选的，并且按键入的
-           形式原样传递给记录器。(缩写: -l)
-           示例: 
-            -dl:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
-            -dl:MyLogger,C:\My.dll*ForwardingLogger,C:\Logger.dll
+        <target state="translated">  -distributedLogger:&lt;central logger&gt;*&lt;forwarding logger&gt;
+                     使用此记录器来记录 MSBuild 中的事件，向每个节点
+                     附加不同的记录器实例。要指定
+                     多个记录器，请分别指定每个记录器。
+                     (缩写形式 -dl)
+                     &lt;logger&gt; 语法为:
+                       [&lt;class&gt;,]&lt;assembly&gt;[,&lt;options&gt;][;&lt;parameters&gt;]
+                     &lt;logger class&gt; 语法为:
+                       [&lt;partial or full namespace&gt;.]&lt;logger class name&gt;
+                     &lt;logger assembly&gt; 语法为:
+                       {&lt;assembly name&gt;[,&lt;strong name&gt;] | &lt;assembly file&gt;}
+                     记录器选项指定 MSBuild 创建记录器的方式。
+                     &lt;logger parameters&gt; 是可选的，并且按键入的
+                     形式原样传递给记录器。(缩写形式: -l)
+                     示例:
+                       -dl:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
+                       -dl:MyLogger,C:\My.dll*ForwardingLogger,C:\Logger.dll
 </target>
         <note>
       LOCALIZATION: The following should not be localized:
@@ -1129,7 +1131,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
       </trans-unit>
       <trans-unit id="OptionalLoggerCreationMessage">
         <source>The specified logger could not be created and will not be used. {0}</source>
-        <target state="new">The specified logger could not be created and will not be used. {0}</target>
+        <target state="translated">无法创建指定的记录器，将不会使用它。{0}</target>
         <note>
       UE: This error is shown when a logger cannot be loaded and instantiated from its assembly.
       LOCALIZATION: {0} contains the exception message explaining why the
