--- a/src/MSBuild/Resources/xlf/Strings.zh-Hant.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.zh-Hant.xlf
@@ -337,15 +337,16 @@ Copyright (C) Microsoft Corporation. 著作權所有，並保留一切權利。
                        -logger:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -logger:XMLLogger,C:\Loggers\MyLogger.dll;OutputAsHTML
 </source>
-        <target state="needs-review-translation">  -logger:&lt;記錄器&gt;   使用此記錄器可記錄 MSBuild 的事件。
+        <target state="translated">  -logger:&lt;記錄器&gt;   使用此記錄器可記錄 MSBuild 的事件。
                      若要指定多個記錄器，請各別指定每個記錄器。
-                     &lt;logger&gt; 語法為:
-                       [&lt;記錄器類別&gt;,]&lt;記錄器組件&gt;[;&lt;記錄器參數&gt;]
-                     &lt;logger class&gt; 語法為:
+                     &lt;記錄器&gt; 語法為:
+                       [&lt;類別&gt;,]&lt;組件&gt;[,&lt;選項&gt;][;&lt;參數&gt;]
+                     &lt;記錄器類別&gt; 語法為:
                        [&lt;一部分或完整的命名空間&gt;.]&lt;記錄器類別名稱&gt;
-                     &lt;logger assembly&gt; 語法為:
+                     &lt;記錄器組件&gt; 語法為:
                        {&lt;組件名稱&gt;[,&lt;strong name&gt;] | &lt;組件檔案&gt;}
-                     &lt;logger parameters&gt; 是選擇性參數，其會依您輸入的內容，
+                     記錄器選項會指定 MSBuild 建立記錄器的方式。
+                     &lt;記錄器參數&gt; 是選擇性參數，其會依您輸入的內容，
                      完全一樣地傳遞到記錄器。(簡短形式: -l)
                      範例:
                        -logger:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
@@ -605,18 +606,19 @@ Copyright (C) Microsoft Corporation. 著作權所有，並保留一切權利。
                        -dl:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
                        -dl:MyLogger,C:\My.dll*ForwardingLogger,C:\Logger.dll
 </source>
-        <target state="needs-review-translation">  -distributedLogger:&lt;中央記錄器&gt;*&lt;轉寄記錄器&gt;
+        <target state="translated">  -distributedLogger:&lt;中央記錄器&gt;*&lt;轉寄記錄器&gt;
                      使用此記錄器可記錄 MSBuild 的事件，
                      同時為每個節點附加一個不同的記錄器執行個體。
                      若要指定多個記錄器，請各別指定每個記錄器。
                      (簡短形式 -dl)
-                     &lt;logger&gt; 語法為:
-                       [&lt;記錄器類別&gt;,]&lt;記錄器組件&gt;[;&lt;記錄器參數&gt;]
-                     &lt;logger class&gt; 語法為:
+                     &lt;記錄器&gt; 語法為:
+                       [&lt;類別&gt;,]&lt;組件&gt;[,&lt;選項&gt;][;&lt;參數&gt;]
+                     &lt;記錄器類別&gt; 語法為:
                        [&lt;一部分或完整的命名空間&gt;.]&lt;記錄器類別名稱&gt;
-                     &lt;logger assembly&gt; 語法為:
+                     &lt;記錄器組件&gt; 語法為:
                        {&lt;組件名稱&gt;[,&lt;strong name&gt;] | &lt;組件檔案&gt;}
-                     &lt;logger parameters&gt; 是選擇性參數，其會依您輸入的內容，
+                     記錄器選項會指定 MSBuild 建立記錄器的方式。
+                     &lt;記錄器參數&gt; 是選擇性參數，其會依您輸入的內容，
                      完全一樣地傳遞到記錄器。(簡短形式: -l)
                      範例:
                        -dl:XMLLogger,MyLogger,Version=1.0.2,Culture=neutral
@@ -1129,7 +1131,7 @@ Copyright (C) Microsoft Corporation. 著作權所有，並保留一切權利。
       </trans-unit>
       <trans-unit id="OptionalLoggerCreationMessage">
         <source>The specified logger could not be created and will not be used. {0}</source>
-        <target state="new">The specified logger could not be created and will not be used. {0}</target>
+        <target state="translated">無法建立指定的記錄器，且不會使用。{0}</target>
         <note>
       UE: This error is shown when a logger cannot be loaded and instantiated from its assembly.
       LOCALIZATION: {0} contains the exception message explaining why the
