--- a/src/Tasks/Common/Resources/Strings.resx
+++ b/src/Tasks/Common/Resources/Strings.resx
@@ -568,4 +568,20 @@ The following are names of parameters or literal values and should not be transl
     <value>NETSDK1115: The current .NET SDK does not support .NET Framework without using .NET SDK Defaults. It is likely due to a mismatch between C++/CLI project CLRSupport property and TargetFramework.</value>
     <comment>{StrBegin="NETSDK1115: "}</comment>
   </data>
+  <data name="NoSupportCppExeDotnetCore" xml:space="preserve">
+    <value>NETSDK1116: C++/CLI projects targeting .NET Core must be libraries and cannot be applications.</value>
+    <comment>{StrBegin="NETSDK1116: "}</comment>
+  </data>
+  <data name="NoSupportCppPublishDotnetCore" xml:space="preserve">
+    <value>NETSDK1117: Does not support publish of C++/CLI project targeting dotnet core.</value>
+    <comment>{StrBegin="NETSDK1117: "}</comment>
+  </data>
+  <data name="NoSupportCppPackDotnetCore" xml:space="preserve">
+    <value>NETSDK1118: C++/CLI projects targeting .NET Core cannot be packed.</value>
+    <comment>{StrBegin="NETSDK1118: "}</comment>
+  </data>
+  <data name="NoSupportCppEnableComHosting" xml:space="preserve">
+    <value>NETSDK1119: C++/CLI projects targeting .NET Core cannot use EnableComHosting=true.</value>
+    <comment>{StrBegin="NETSDK1119: "}</comment>
+  </data>
 </root>
