--- a/src/Tasks/Resources/Strings.resx
+++ b/src/Tasks/Resources/Strings.resx
@@ -931,6 +931,7 @@
   <data name="GenerateResource.DeleteCorruptOutputFailed">
     <value>MSB3560: Could not delete the possibly corrupt output file "{0}". {1}</value>
   </data>
+  <comment>{StrBegin="MSB3560: "}</comment>
   <data name="GenerateResource.ObsoleteStringsTag">
     <value>MSB3562: The "[strings]" tag is no longer necessary in text resources; please remove it.</value>
     <comment>{StrBegin="MSB3562: "}</comment>
