--- a/src/Tasks/Resources/Strings.resx
+++ b/src/Tasks/Resources/Strings.resx
@@ -1130,6 +1130,10 @@
     <value>MSB3823: Non-string resources require the property GenerateResourceUsePreserializedResources to be set to true.</value>
     <comment>{StrBegin="MSB3823: "}</comment>
   </data>
+  <data name="GenerateResource.CoreSupportsLimitedScenarios">
+    <value>MSB3824: In order to build with .NET Core, resource inputs must be in .txt or .resx format.</value>
+    <comment>{StrBegin="MSB3824: "}</comment>
+  </data>
 
 
   <!--
