--- a/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.cs.xlf
+++ b/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.cs.xlf
@@ -30,9 +30,9 @@ Psaní první aplikace: https://aka.ms/first-net-core-app
         <source>Welcome to .NET Core {0}!
 ---------------------
 SDK Version: {1}</source>
-        <target state="new">Welcome to .NET Core {0}!
+        <target state="translated">Vítá vás .NET Core {0}!
 ---------------------
-SDK Version: {1}</target>
+Verze sady SDK: {1}</target>
         <note />
       </trans-unit>
       <trans-unit id="TelemetryMessage">
