--- a/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.de.xlf
+++ b/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.de.xlf
@@ -30,9 +30,9 @@ Schreiben Sie Ihre erste Anwendung: https://aka.ms/first-net-core-app
         <source>Welcome to .NET Core {0}!
 ---------------------
 SDK Version: {1}</source>
-        <target state="new">Welcome to .NET Core {0}!
+        <target state="translated">Willkommen bei .NET Core {0}!
 ---------------------
-SDK Version: {1}</target>
+SDK-Version: {1}</target>
         <note />
       </trans-unit>
       <trans-unit id="TelemetryMessage">
