--- a/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.es.xlf
+++ b/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.es.xlf
@@ -30,9 +30,9 @@ Escriba su primera aplicación: https://aka.ms/first-net-core-app
         <source>Welcome to .NET Core {0}!
 ---------------------
 SDK Version: {1}</source>
-        <target state="new">Welcome to .NET Core {0}!
+        <target state="translated">Esto es .NET Core {0}.
 ---------------------
-SDK Version: {1}</target>
+Versión del SDK: {1}</target>
         <note />
       </trans-unit>
       <trans-unit id="TelemetryMessage">
