--- a/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.it.xlf
+++ b/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.it.xlf
@@ -30,9 +30,9 @@ Istruzioni per la creazione della prima app: https://aka.ms/first-net-core-app
         <source>Welcome to .NET Core {0}!
 ---------------------
 SDK Version: {1}</source>
-        <target state="new">Welcome to .NET Core {0}!
+        <target state="translated">Benvenuti a .NET Core {0}
 ---------------------
-SDK Version: {1}</target>
+Versione SDK: {1}</target>
         <note />
       </trans-unit>
       <trans-unit id="TelemetryMessage">
