--- a/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.ko.xlf
+++ b/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.ko.xlf
@@ -30,9 +30,9 @@ GitHub에서 문제 보고 및 소스 찾기: https://github.com/dotnet/core
         <source>Welcome to .NET Core {0}!
 ---------------------
 SDK Version: {1}</source>
-        <target state="new">Welcome to .NET Core {0}!
+        <target state="translated">.NET Core {0}을(를) 시작합니다.
 ---------------------
-SDK Version: {1}</target>
+SDK 버전: {1}</target>
         <note />
       </trans-unit>
       <trans-unit id="TelemetryMessage">
@@ -43,7 +43,7 @@ The .NET Core tools collect usage data in order to help us improve your experien
 Read more about .NET Core CLI Tools telemetry: https://aka.ms/dotnet-cli-telemetry</source>
         <target state="translated">원격 분석
 ---------
-.NET Core 도구는 사용자 환경 개선을 위해 사용량 데이터를 수집합니다. 데이터는 익명입니다. Microsoft에서 데이터를 수집하여 커뮤니티와 공유합니다. 원하는 셸에서 DOTNET_CLI_TELEMETRY_OPTOUT 환경 변수를 '1' 또는 'true'로 설정하여 원격 분석을 옵트아웃할 수 있습니다.
+.NET Core 도구는 사용자 환경 개선을 위해 사용량 현황 데이터를 수집합니다. 데이터는 익명입니다. Microsoft에서 데이터를 수집하여 커뮤니티와 공유합니다. 원하는 셸에서 DOTNET_CLI_TELEMETRY_OPTOUT 환경 변수를 '1' 또는 'true'로 설정하여 원격 분석을 옵트아웃할 수 있습니다.
 
 .NET Core CLI 도구 원격 분석에 대한 자세한 내용은 https://aka.ms/dotnet-cli-telemetry를 참조하세요.</target>
         <note />
