--- a/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.ru.xlf
+++ b/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.ru.xlf
@@ -30,9 +30,9 @@ Write your first app: https://aka.ms/first-net-core-app
         <source>Welcome to .NET Core {0}!
 ---------------------
 SDK Version: {1}</source>
-        <target state="new">Welcome to .NET Core {0}!
+        <target state="translated">Вас приветствует .NET Core {0}!
 ---------------------
-SDK Version: {1}</target>
+Версия пакета SDK: {1}</target>
         <note />
       </trans-unit>
       <trans-unit id="TelemetryMessage">
