--- a/src/MSBuild/Resources/xlf/Strings.zh-Hans.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.zh-Hans.xlf
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
-  <file datatype="xml" source-language="en" target-language="zh-Hans" original="../Strings.resx">
+  <file datatype="xml" source-language="en" target-language="zh-HANS" original="../Strings.resx">
     <body>
       <trans-unit id="AmbiguousProjectError">
         <source>MSBUILD : error MSB1011: Specify which project or solution file to use because this folder contains more than one project or solution file.</source>
@@ -369,7 +369,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                        -verbosity:quiet
 </source>
         <target state="translated">  -verbosity:&lt;level&gt; 在事件日志中显示此级别的信息量。
-           可用的详细级别有: q[uiet]、 m[inimal]、
+           可用的详细程度有: q[uiet]、 m[inimal]、
            n[ormal]、d[etailed] 和 diag[nostic]。(缩写: -v)
            示例:
                        -verbosity:quiet
@@ -799,7 +799,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
               默认值为不附加到日志文件。
             Encoding -- 指定文件的编码，
               例如，UTF-8、Unicode 或 ASCII
-           默认的详细级别为 Detailed。
+           默认的详细程度为 Detailed。
            示例:
             -fileLoggerParameters:LogFile=MyLog.log;Append;
                       Verbosity=diagnostic;Encoding=UTF-8
@@ -1014,7 +1014,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
       </trans-unit>
       <trans-unit id="InvalidVerbosityError">
         <source>MSBUILD : error MSB1018: Verbosity level is not valid.</source>
-        <target state="translated">MSBUILD : error MSB1018: 详细级别无效。</target>
+        <target state="translated">MSBUILD : error MSB1018: 详细程度无效。</target>
         <note>
       {StrBegin="MSBUILD : error MSB1018: "}UE: This message does not need in-line parameters because the exception takes care of displaying the invalid arg.
       This error is shown when a user specifies an unknown verbosity level e.g. "msbuild -verbosity:foo". The only valid verbosities
@@ -1114,7 +1114,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
       </trans-unit>
       <trans-unit id="MissingVerbosityError">
         <source>MSBUILD : error MSB1016: Specify the verbosity level.</source>
-        <target state="translated">MSBUILD : error MSB1016: 请指定详细级别。</target>
+        <target state="translated">MSBUILD : error MSB1016: 请指定详细程度。</target>
         <note>
       {StrBegin="MSBUILD : error MSB1016: "}UE: This happens if the user does something like "msbuild.exe -verbosity". The user must pass in a verbosity level
       after the switch e.g. "msbuild.exe -verbosity:detailed".
